--- a/css/friendly.css
+++ b/css/friendly.css
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: #fdfdfd;
     font-size: 1em;
-    margin:0;
+    margin:3vh 0;
     padding-left: 10px;
     border: 3px solid #dddddd;
 }
