--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans: 400,600');
 :root {
-	--body-width: 70vw;
+	--body-width: 72vw;
 }
 
 html { 
@@ -137,6 +137,7 @@ img.three-quarter-h {
 
 img.half-h{
 	height: 43vh;
+    max-width: calc(0.91 * var(--body-width));
 }
 
 img.quarter-h-h {
@@ -155,13 +156,13 @@ img.sixteenth-h {
 	height: 6vh;
 }
 img.textimg {
-    height: 1vw;
+    height: 1em;
     /* margin-bottom: -0.4vw; */
 }
 
 .common-parts {
-    border: 5px solid #aaa;
-    width: 26vw;
+    border: 4px solid #bbb;
+    width: calc(0.4 * var(--body-width));
     /* max-height: 22vh; */
 }
 
@@ -312,7 +313,7 @@ div.part {
 
 div.part img {
     margin-top: 0.2vw;
-    width: 8vw;
+    width: calc(0.12 * var(--body-width)); 
     /*max-height: 10vh;*/
 }
 
@@ -354,11 +355,11 @@ div.partdesc {
 
 .preface {
     text-align: center;
-    font-size: 0.6em;
-    margin-top: 60vh;
+    font-size: 0.5em;
+    /* margin-top: 60vh; */
     margin-right: auto;
     margin-left: auto;
-    width: 35vw;
+    width: calc(0.5 * var(--body-width)); 
 }
 
 @media screen {
@@ -368,7 +369,7 @@ div.partdesc {
         border-color: #aaa;
         height: 2.1vw; 
         margin-bottom:5vh;
-	margin-top: 10vh;
+	    margin-top: 10vh;
     }
 
     .page-break:after {
@@ -453,7 +454,7 @@ li {
 
 .toc-content li:before {
     content: "\f111";
-    font-size: 0.7vw;
+    font-size: 0.6em;
     font-family: FontAwesome;
     color: #f86d22; 
     margin-right: 1em;
@@ -463,7 +464,7 @@ ol.connections {
     background-image: url("/img/parts/connections_title.svg");
     background-repeat: no-repeat;
     background-size: 1.2vw calc(8 * (1vw + 1vh - 1vmin));
-    padding-left: 4vw;
+    padding-left: 6vw;
 	padding-bottom:8vh;
 }
 
