--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
 <meta name="twitter:site" content="@{{ site.twitter_username }}">
 <meta name="twitter:title" content="{{ current_title | replace: site.stmb_key , site.stmb }}">
 <meta name="twitter:description" content="{{ page.description | replace: site.stmb_key , site.stmb }}">
-<meta name="twitter:creator" content="@{{ page.twitter_username }}">
+<meta name="twitter:creator" content="@{{ site.data.people[page.author].twitter }}">
 {% if page.category %}
 <meta name="twitter:image" content="{{ site.url }}/{{ page.lang }}/{{ page.category }}/img/{{ main_image }}">
 {% else %}
