--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 {% for mainpage in site.pages reversed %}
 {% assign pagecat=page.categories[1] %}
+{% if mainpage.category %}
     {% if mainpage.lang==page.lang and mainpage.category==pagecat %} 
         {% assign current_title=mainpage.title | append: ' - ' | append: page.title %}
         {% assign current_github_url=mainpage.github_url %}
@@ -10,6 +11,7 @@
         {% assign current_title=page.title %}
         {% assign current_github_url=page.github_url %}
     {% endif %}
+{% endif %}
 {% endfor %}
 {% if page.cover_image %}
 {% assign main_image = page.cover_image %}
@@ -19,6 +21,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
+<link href="//cdn.bootcss.com/flex-layout-attribute/1.0.3/css/flex-layout-attribute.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/css/fbmain.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css" />
 <link rel="stylesheet" href="/css/friendly.css" />
