--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -87,10 +87,8 @@
     <!-- Footer -->  
     {% include footer.html %}
 
-{% if jekyll.environment == 'production' %}
-    {% include google_analytics.html %}
-{% endif %}
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<!-- <script src="/js/main.js"></script> -->
+    <! -- javascript -->
+    {% include scripts.html %}
+
 </body>
 </html>
