--- a/_layouts/book2.html
+++ b/_layouts/book2.html
@@ -14,6 +14,10 @@
         {% endfor %}
     </ul></nav>
 -->
+    <!-- Menu Nav -->
+    {% include nav.html %}
+
+    <div class="content">
     <!-- Cover Page -->
     <div id="page1">
     {% capture covertext %} {% include cover.md %} {% endcapture %}
@@ -58,6 +62,7 @@
     </div>
     <!-- page nav -->
     {% include page_nav.html %}
+    </div>
 
     <!-- Footer -->  
     {% include footer.html %}
