fixed main page layout and navigation

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,11 +12,11 @@
         </div>
     </div>
     <div class="nav-isVisIfMobile">
-        <div class="item">
-            <a href="/tags">Tags</a>
+       <div class="item">
+            <a href="/en/setup/lufa">LUFA Setup</a>
         </div>
         <div class="item">
-            <a href="/videos">Videos</a>
+            <a href="/en/begin">Beginner's Guide</a>
         </div>
     </div>
 </div>
