--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <body>
     {% include nav.html %}
     <div id="content">
+        {% include page-header.html %}
         {{ content }}
     </div>
 </body>
