--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,7 @@ div.partdesc {
         font-size: 0.5em; 
         margin-top: -6vh;
         text-align: right;
+        margin-right: 1em;
     }
 }
 
