--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -14,6 +14,7 @@
         {% endfor %}
     </ul></nav>
 -->
+    <div class="content">
     <!-- Cover Page -->
     <div id="page1">
     {% capture covertext %} {% include cover.md %} {% endcapture %}
@@ -60,30 +61,30 @@
     </div>
     </div>
 
-    <div class="page-break"></div>
     <!-- Contents -->
     {% assign pagenumber = 0  %}
 
     {% for post in site.categories[page.category] reversed %}
       {% capture id %}{{ post.id | remove:'/' | downcase }}{% endcapture %}
+        {% if post.url contains "index" %}
+
+        {% else %}
         {% if post.lang ==  page.lang %}
             {% assign pagenumber = pagenumber | plus: 1 %}
+           <div class="page-break"></div>
 
             <div id="page{{ pagenumber | plus: 3 }}" class="">
-    
             {% if post.chapter %}
                 <h1>{{ post.chapter }}. {{ post.title | replace: site.stmb_key , site.stmb }}</h1>
             {% elsif post.fa-icon %}
             {% endif %}
             {{ post.content | replace: site.stmb_key , site.stmb }}
             </div>
-            {% if forloop.last == true %}
-            {% else %}
-                <div class="page-break"></div>
-            {% endif %}
+        {% endif %}
         {% endif %}
     {% endfor %}
 
+    </div>
     <!-- Footer -->  
     {% include footer.html %}
 
