added print css to remove menu link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<div id="nav" layout="row top-left">
+<div class="no-print" id="nav" layout="row top-left">
     <div self="left">
         <a href="/"><div class="logo logo-isNotVisIfMobile">{{ site.title | replace: site.stmb_key , site.stmb }}</div></a>
         <a href="/"><div class="logo logo-isVisIfMobile"></div></a>
