fixed TOC parameter, exercise 7 page-break

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 {% if mainpage.category %}
     {% if mainpage.lang==page.lang and mainpage.category==pagecat %} 
         {% assign current_title=page.title | append: ' | ' | append: mainpage.title %}
+        {% assign mainpage_title=mainpage.title %}
         {% assign current_github_url=mainpage.github_url %}
         {% assign full_article = mainpage.url %}
         {% assign maincover_image = mainpage.cover_image %}
