--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,12 @@ body {
 */
 } 
 
+:target {
+    padding-top: 79px;
+    margin-top: -79px;
+    display: inline-block;
+}
+
 a:focus { 
     outline: none; 
 }
