--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
-<link href="//cdn.bootcss.com/flex-layout-attribute/1.0.3/css/flex-layout-attribute.min.css" rel="stylesheet">
+<link href="/css/flex-layout-attribute.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/fbmain.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css" />
