updated gems, fixed index.html columns, fixed css double loaded

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 <!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
 <link href="/css/flex-layout-attribute.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/fbmain.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css" />
 <link rel="stylesheet" href="/css/friendly.css" />
 <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
