--- a/_layouts/book2.html
+++ b/_layouts/book2.html
@@ -69,7 +69,6 @@
 {% if jekyll.environment == 'production' %}
     {% include google_analytics.html %}
 {% endif %}
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<!-- <script src="/js/main.js"></script> -->
+<script src="/js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </body>
 </html>
