fixed csp issues

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 {% if jekyll.environment == 'production' %}
     {% include google_analytics.html %}
 {% endif %}
-<script src="/js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="/js/jquery.mixitup.min.js"></script>
-<script src="/js/fbmain.js"></script> 
+<script src="/js/jquery-3.6.1.min.js" integrity="sha384-i61gTtaoovXtAbKjo903+O55Jkn2+RtzHtvNez+yI49HAASvznhe9sZyjaSHTau9" crossorigin="anonymous" nonce="77AABBCC"></script>
+<script src="/js/jquery.mixitup.min.js" nonce="77AABBCC"></script>
+<script src="/js/fbmain.js" nonce="77AABBCC"></script> 
 
