--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<META HTTP-EQUIV='Content-Security-Policy' CONTENT="base-uri 'self'; default-src 'self' https://www.google-analytics.com ; script-src 'self' 'unsafe-inline' 'nonce-77AABBCC' 'strict-dynamic' https: http: ; style-src 'self' 'unsafe-inline' https://netdna.bootstrapcdn.com ; font-src 'self' https://netdna.bootstrapcdn.com; ">
 {% for mainpage in site.pages reversed %}
 {% assign pagecat=page.categories[1] %}
 {% if mainpage.category %}
