--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -30,6 +30,6 @@
 {% if jekyll.environment == 'production' %}
     {% include google_analytics.html %}
 {% endif %}
-<script src="/js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="/js/jquery-3.6.1.min.js" integrity="sha384-i61gTtaoovXtAbKjo903+O55Jkn2+RtzHtvNez+yI49HAASvznhe9sZyjaSHTau9" crossorigin="anonymous" nonce="77AABBCC"></script>
 </body>
 </html>
