improved lighthouse rating

--- a/_includes/breadboard.html
+++ b/_includes/breadboard.html
@@ -1,6 +1,6 @@
 <div class="breadboard-container">
     <div class="schematic-title">
-        <img src="/img/parts/breadboard_title.svg">
+        <img src="/img/parts/breadboard_title.svg" alt="Breadboard Title">
     </div>
     <div class="breadboard">
         <img class="breadboard" src="img/{{ page.breadboard }}"  alt="(STMB) - {{ page.title }} Inkscape Breadboard Diagram">
