--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <div class="no-print" id="nav" layout="row top-left">
     <div self="left">
         <a href="/"><div class="logo logo-isNotVisIfMobile">{{ site.title | replace: site.stmb_key , site.stmb }}</div></a>
-        <a href="/"><div class="logo logo-isVisIfMobile"></div></a>
+        <a href="/" aria-label="{{ site.title | replace: site.stmb_key , site.stmb }}"><div class="logo logo-isVisIfMobile"></div></a>
     </div>
     <div class="nav-isNotVisIfMobile">
         <div class="item">
