--- a/css/friendly.css
+++ b/css/friendly.css
@@ -45,7 +45,7 @@
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
 .highlight .mf { color: #40a070 } /* Literal.Number.Float */
 .highlight .mh { color: #40a070 } /* Literal.Number.Hex */
-.highlight .mi { color: #40a070 } /* Literal.Number.Integer */
+.highlight .mi { color: #265E41 } /* Literal.Number.Integer */
 .highlight .mo { color: #40a070 } /* Literal.Number.Oct */
 .highlight .sb { color: #4070a0 } /* Literal.String.Backtick */
 .highlight .sc { color: #4070a0 } /* Literal.String.Char */
