--- a/_includes/connections.html
+++ b/_includes/connections.html
@@ -1,5 +1,5 @@
 <div class="connections-container">
 <div class="schematic-title">
-<img src="/img/parts/connections_title.svg">
+<img src="/img/parts/connections_title.svg" alt="Connection Title">
 </div>
 </div>
