--- a/_includes/schematic.html
+++ b/_includes/schematic.html
@@ -1,6 +1,6 @@
 <div class="schematic-container">
 <div class="schematic-title">
-<img src="/img/parts/schematic_title.svg">
+<img src="/img/parts/schematic_title.svg" alt="Schematic Title">
 </div>
 <div class="schematic">
 <img class="schematic" src="img/{{ page.schematic }}" alt="(STMB) - {{ page.title }} Schematic Diagram">
