fixed font-display swap

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/fonts/open-sans-v34-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('/fonts/open-sans-v34-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -16,6 +17,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: url('/fonts/open-sans-v34-latin-600.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('/fonts/open-sans-v34-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
